--- a/src/App.css
+++ b/src/App.css
@@ -24,4 +24,9 @@ body {
   text-shadow: 0px 3px #ee1c75;
   filter: drop-shadow(2px 4px 6px black);
 }
- 
+
+@media (max-width: 599.9px) {
+  .tableLogo {
+    height: 25px;
+  }
+}
